--- a/admin-frontend/public/index.html
+++ b/admin-frontend/public/index.html
@@ -8,8 +8,7 @@
       name="description"
       content="Portfolio Admin Panel"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Portfolio Admin</title>
+    <title>Portfolio Admin Panel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
